<resources>
    <string name="app_name">AWQAT</string>
    <string name="create_new_acc">انشاء  حساب جديد</string>
    <string name="TermsofService" translatable="false"><u> شروط الخدمة </u></string>
    <string name="Resend_Code" translatable="false"><u>إعادة الارسال</u></string>


    <string name="PrivacyPolicy" translatable="false"><u>سياسة الخصوصية</u></string>
    <string name="con" translatable="false"><u>متابعة كزائر؟</u></string>
    <string name="forgetpass" translatable="false"><u>نسيت كلمة المرور؟</u></string>

    <string name="GOT_IT" translatable="false">إبدأ الأن</string>
    <string name="NEXT" translatable="false">التالي</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">الإعدادات</string>
    <string name="profile">صفحتي</string>
    <string name="fav">المفضلة</string>
    <string name="dashboard">التصنيفات</string>
    <string name="home">الرئيسية</string>
    <string name="showmore"><u>شاهد اكثر</u></string>
    <string name="title_activity_meals">Meals</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>