<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard"
        />
    <item
        android:id="@+id/favourite"
        android:enabled="true"
        android:icon="@drawable/ic_favourite"
        android:title="@string/fav"/>

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>
</menu>